--- a/Steam/css/style.css
+++ b/Steam/css/style.css
@@ -1,3 +1,9 @@
+html {
+    margin: 0;
+    padding: 0;
+    background: #171a21;
+}
+
 a {
     text-decoration: none;
 }
@@ -10,8 +16,141 @@ body {
 
 .header {
     width: auto;
-    height: 104px; 
     background: #171a21;
+}
+
+.header_adaptive_box {
+    display: none;
+    background: #171a21;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 20;
+    box-shadow: 0 0 7px 0 rgb(0 0 0 / 75%);
+    overflow: hidden;
+    padding: 13px 8px;
+}
+
+.responsive_page_menu_ctn {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    overflow: hidden;
+    background: black;
+    z-index: 30;
+    width: 280px;
+    display: none;
+}
+
+.menu_active {
+    display: block;
+}
+
+.responsive_page_menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    overflow: hidden;
+    overflow-y: auto;
+}
+
+.mainmenu_contents {
+    background: #171a21;
+    font-size: 22px;
+    position: relative;
+    min-height: 100%;
+}
+
+.mainmenu_contents_items {
+    font-family: "Motiva Sans", Sans-serif;
+    font-weight: 200;
+}
+
+.menuitem {
+    position: relative;
+    color: #bdbdbd;
+    background: #171a21;
+    border-top: 1px solid #2f3138;
+    border-bottom: 1px solid #000000;
+    display: block;
+    padding: 0 12px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    line-height: 2.5em;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.minor_menu_items {
+    border-top: 1px solid #2f3138;
+    border-bottom: none;
+}
+
+.menuitem {
+    position: relative;
+    color: #bdbdbd;
+    background: #171a21;
+    border-top: 1px solid #2f3138;
+    border-bottom: 1px solid #000000;
+    display: block;
+    padding: 0 12px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    line-height: 2.5em;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.change_language_action {
+    border: none;
+    font-size: 0.75em;
+    color: #8a8a8a;
+}
+
+.mainmenu_footer_spacer {
+    height: 160px;
+}
+
+.mainmenu_footer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    font-size: 10px;
+    white-space: normal;
+    color: #8a8a8a;
+    padding: 0 12px 24px 12px;
+}
+
+.mainmenu_footer_logo {
+    font-size: 10px;
+    white-space: normal;
+    color: #8a8a8a;
+}
+
+.mainmenu_valve_links {
+    font-size: 10px;
+    white-space: normal;
+    color: #8a8a8a;
+}
+
+.mainmenu_valve_links a {
+    color: #8a8a8a;
+}
+
+.menu_logo {
+    position: absolute;
+    top: 9px;
+    left: 8px;
+    cursor: pointer;
+    width: 36px;
+    height: 31px;
 }
 
 .top_content {
@@ -109,7 +248,8 @@ body {
 
 .center_content {
     padding: 0px 8px;
-    height: 653px;
+    width: 100%;
+    padding-bottom: 137px;
     background: radial-gradient(rgba(24, 26, 33, 0) 0%, #181A21 100%) fixed no-repeat, url(https://store.cloudflare.steamstatic.com/public/shared/images/joinsteam/new_login_bg_strong_mask.jpg) center top no-repeat, #181A21;
 
 }
@@ -388,6 +528,7 @@ input {
     max-width: 200px;
     font-size: 12px;
     color: #E9E9E9;
+    margin-top: 20px;
 }
 
 .join_btn {
@@ -417,7 +558,6 @@ input {
 
 .footer_box {
     background-color: #181A21;
-    height: 303px;
 }
 
 .footer {
